@@ -6,11 +6,6 @@
  */
 
 /**
- * We need the title class
- */
-require_once( 'Title.php' );
-
-/**
  * Handles talking to the file cache, putting stuff in and taking it back out.
  * Mostly called from Article.php, also from DatabaseFunctions.php for the
  * emergency abort/fallback to cache.
